--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @restaurant.name %></h1>
 <p><%= @restaurant.address %></p>
 
+<%= cl_image_tag @restaurant.photo.key if @restaurant.photo.attached? %>
+
 <% if policy(@restaurant).edit? %>
   <%= link_to 'Edit', edit_restaurant_path(@restaurant) %>
 <% end %>
